--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
 
+    <string name="stacking_no_access_to_controller_account_title">No access to controller account</string>
+    <string name="stacking_no_access_to_controller_account_message">Add your controller account in device.</string>
+
     <string name="assets_search_placeholder">No tokens with\nentered name were found</string>
 
     <string name="asset_add_evm_token_invalid_contract_address_message">The entered contract address is not a %s ERC-20 contract.</string>
