--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <string name="delegation_delegations">Delegations</string>
+    <string name="delegation_delegated_votes">Delegated votes</string>
+    <string name="delegation_recent_votes_format">Voted last %s days</string>
 
     <string name="assets_search_placeholder">No tokens with\nentered name were found</string>
 
