--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
+    <string name="common_sort_by">Sort by</string>
+
     <string name="delegation_delegate_filter_all">All accounts</string>
     <string name="delegation_delegate_filter_organizations">Organizations</string>
     <string name="delegation_delegate_filter_individuals">Individuals</string>
