--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
 
+    <string name="update_notification_item_version">Version %s</string>
+
+    <string name="update_notifications_show_more">See all available updates</string>
+    <string name="update_notifications_latest">Latest</string>
+    <string name="update_notifications_severity_critical">Critical</string>
+    <string name="update_notifications_severity_major">Major</string>
+
+    <string name="update_notifications_critical_update_alert_titile">Critical update</string>
+    <string name="update_notifications_critical_update_alert_subtitile">To avoid any issues and improve the user experience, we strongly recommend install the updates as soon as possible.</string>
+
+    <string name="update_notifications_major_update_alert_titile">Major update</string>
+    <string name="update_notifications_major_update_alert_subtitile">Select another account as a controller to delegate staking management operations to it</string>
+
+    <string name="update_notification_title">Update available</string>
+    <string name="update_notification_install_btn">Install the updates</string>
+
     <string name="common_enable">Enable</string>
     <string name="settings_safe_mode_confirmation_title">Safe mode</string>
     <string name="settings_safe_mode_confirmation_message">Screen recording and screenshots will not be available. The minimized app will not display the content</string>
