Remove votes suggestion

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="delegation_tracks">Tracks</string>
 
     <string name="common_element_and_more_format">%s (+%s more)</string>
-<!--    <string name="assets_manage_tokens_partial_networks">%s (+%s more)</string>-->
+    <!--    <string name="assets_manage_tokens_partial_networks">%s (+%s more)</string>-->
 
     <string name="delegation_all_votes">Voted for all time</string>
     <string name="delegation_delegate_info">Delegate info</string>
@@ -48,6 +48,10 @@
 
     <string name="delegation_tracks_disabled_apply_button_text">Select at least 1 track...</string>
     <string name="delegation_tracks_empty_list_placeholder">No tracks are available to delegate</string>
+
+    <string name="remove_votes_suggestion_title">Remove history of your votes?</string>
+    <string name="remove_votes_suggestion_description">You have previously voted in referendums in 3 tracks. In order to make these tracks available for delegation, you need to remove your existing votes.</string>
+    <string name="remove_votes_suggestion_button_text">Remove votes</string>
 
     <string name="update_notification_item_version">Version %s</string>
 
