--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -53,6 +53,12 @@
     <string name="remove_votes_suggestion_description">You have previously voted in referendums in %d tracks. In order to make these tracks available for delegation, you need to remove your existing votes.</string>
     <string name="remove_votes_suggestion_button_text">Remove votes</string>
 
+    <string name="unavailable_tracks_title">Unavailable tracks</string>
+    <string name="unavailable_tracks_button_text">Remove votes in order to delegate in these tracks</string>
+
+    <string name="unavailable_tracks_voted_group">Tracks which you have existing votes in</string>
+    <string name="unavailable_tracks_delegated_group">Tracks that you have already delegated votes</string>
+
     <string name="update_notification_item_version">Version %s</string>
 
     <string name="update_notifications_show_more">See all available updates</string>
