--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
-    <string name="delegation_referendum_vote">Your vote: %s via %s</string>
+    <string name="delegation_referendum_vote">Your votes: %s via %s</string>
     <string name="delegation_referendum_details_vote">Your votes via %s</string>
 
     <string name="delegation_delegate">Delegate</string>
