--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="delegation_edit_delegation">Edit delegation</string>
 
     <string name="select_delegation_tracks_add_title">Select tracks to add delegation</string>
+    <string name="select_delegation_tracks_revoke_title">Select tracks to revoke your delegation</string>
     <string name="select_delegation_tracks_edit_title">Select tracks to edit delegation</string>
 
     <string name="common_revoke">Revoke</string>
